<resources>
    <string name="app_name">MechanicGarageAndroid</string>
    <string name="appointment_item_text">Rezerviraj termin</string>
    <string name="car_details_item_text">Uredi podatke o vozilu</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="password_reinput_hint">Potvrdi password</string>
    <string name="login_submit_text">Unesi</string>
    <string name="name_input_hint">Ime i prezime</string>
    <string name="login_item_text">Prijavi se</string>
    <string name="login_email_error">Unesite ispravan email</string>
    <string name="login_password_error">Neispravna lozinka</string>
    <string name="login_password_different_error">Šifre moraju biti jednake</string>
    <string name="login_name_error">Morate ispuniti ovo polje</string>
    <string name="login_toogle_text">Prijava</string>
    <string name="register_toogle_text">Registracija</string>
    <string name="garage_details_text">Garage about this and that, about this and that</string>
    <string name="contact_info_text">Kontakt:</string>
    <string name="garage_address_text">Garage Address</string>
    <string name="garage_email_text">garage@email.com</string>
    <string name="garage_phone_text">098/098-0098</string>
    <string name="garage_info_item_text">Info</string>
    <string name="garage_name_text">GarageName</string>
    <string name="registration_error_text">Greška u registraciji</string>
    <string name="sign_in_error_text">Greška prilikom prijave</string>
    <string name="sign_in_success_text">Uspješno ste prijavljeni</string>
    <string name="registrarion_success_text">Uspješno ste registrirani i prijavljeni</string>
    <string name="logout_item_text">Odjava</string>
    <string name="car_details_title_text">Informacije o automobilu:</string>
    <string name="car_make_hint">Proizvođač:</string>
    <string name="car_model_hint">Model:</string>
    <string name="car_engine_hint">Tip motora(npr. 2.0 diesel):</string>
    <string name="car_vin_hint">Broj šasije(VIN):</string>
    <string name="car_year_label">Godina proizvodnje:</string>
    <string name="empty_input_field_error">Morate popuniti ovo polje</string>
    <string name="wrong_VIN_error">Neispravan VIN</string>
    <string name="garage_appointment_title_text">Zatraži termin:</string>
    <string name="required_service_small_text">Mali servis</string>
    <string name="required_service_brakes_text">Servis kočnica</string>
    <string name="required_service_big_text">Veliki servis</string>
    <string name="service_type_text">Vrsta servisa:</string>
    <string name="required_service_diagnostics_text">Dijagnostika</string>
    <string name="required_service_tyres_text">Izmjena/provjera guma</string>
    <string name="required_service_other_text">Ostalo</string>
    <string name="extra_note_input_hint">Dodatne poruke servisu(nije obvezno ali se preporuča):</string>
    <string name="submit_service_request_text">Podnesi zahtjev</string>
    <string name="no_service_checked_error">Morate odabrati barem jednu vrstu servisa</string>
    <string name="phone_input_hint">Kontakt telefon</string>
</resources>
