<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_reinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/password_reinput_hint"
        android:inputType="textPassword"
        android:visibility="gone" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/name_input_hint"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:text="@string/login_submit_text" />

    <Button
        android:id="@+id/toogle_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        tools:text="Toggle" />

</LinearLayout>