<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_set_appointment"
            android:icon="@drawable/ic_appointment_icon"
            android:title="@string/appointment_item_text" />
        <item
            android:id="@+id/nav_car_details"
            android:icon="@drawable/ic_car_details_icon"
            android:title="@string/car_details_item_text" />
        <item
             android:id="@+id/nav_register_login"
             android:icon="@drawable/ic_register"
             android:title="@string/login_item_text" />
         <!--<item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/tools" />-->
    </group>


</menu>